Implemented hero section and set up variables

--- a/index.html
+++ b/index.html
@@ -22,12 +22,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@100;300;400;700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <h1>Camping places</h1>
-    <p>ggougoug;ogugugg</p>
+    <div class="hero centred-text">
+      <h1>Unwind in Nature's Embrace</h1>
+      <p class="p-large">
+        Our handcrafted wood cabins offer the perfect blend of comfort and
+        rustic charm, allowing you to disconnect from the digital world and
+        reconnect with the natural world.
+      </p>
+      <div class="double-button">
+        <button class="secondary-button">Explore resorts</button>
+        <button>Book with us</button>
+      </div>
+    </div>
   </body>
 </html>
