Added about page

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               Perched on a hill, this cabin showcases breathtaking mountain
               views. Experience the awe-inspiring beauty of the peaks and
               valleys, making it an ideal retreat for nature lovers and
-              adventure seekers
+              adventure seekers.
             </p>
             <ul>
               <li>
