Added cabin 1 page

--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
         </div>
       </div>
 
-      <div class="team-section">
+      <div class="text-wide-img">
         <div class="centred-text">
           <h2>Meet the team</h2>
           <p>
