--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 1 Bathroom
               </li>
             </ul>
-            <button>Book now</button>
+            <a href="/tranquil-pines-cabin.html"><button>Book now</button></a>
           </div>
         </div>
       </div>
