Added all cabin pages

--- a/riverside-haven-cabin.html
+++ b/riverside-haven-cabin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tranquil Pines</title>
+    <title>Riverside Haven</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,12 +35,12 @@
     <main>
       <div class="cabin-header text-wide-img">
         <div class="centred-text">
-          <h1>Tranquil Pines</h1>
-          <h4>From £150 per night</h4>
+          <h1>Riverside Haven</h1>
+          <h4>From £100 per night</h4>
           <p class="p-large">
-            Nestled in a pine forest, this cabin offers a serene retreat, where
-            the soothing whispers of the wind and the fragrance of pine trees
-            transport you to a tranquil haven.
+            Situated by a gentle river, this cabin provides a peaceful escape.
+            The calming sounds of the river and the stunning riverbank views
+            offer a rejuvenating and relaxing stay.
           </p>
           <ul>
             <li>
@@ -60,7 +60,7 @@
                 />
               </svg>
 
-              Sleeps 4
+              Sleeps 2
             </li>
 
             <li>
@@ -76,7 +76,7 @@
                   fill="#20748A"
                 />
               </svg>
-              2 Bedrooms
+              1 Bedrooms
             </li>
 
             <li>
@@ -98,7 +98,7 @@
           <button>Book now</button>
         </div>
         <div class="wide-img">
-          <img src="/images/cabin-1-header.png" alt="" />
+          <img src="/images/cabin-2-header.png" alt="" />
           <div class="location">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -130,32 +130,33 @@
 
       <div class="gallery">
         <div class="gallery-item">
-          <img src="images/cabin-1-kitchen.png" alt="" />
+          <img src="images/cabin-2-kitchen.png" alt="" />
         </div>
 
         <div class="gallery-item">
-          <img src="images/cabin-1-bathroom.png" alt="" />
+          <img src="images/cabin-2-bathroom.png" alt="" />
         </div>
 
         <div class="gallery-item">
-          <img src="images/cabin-1-bedroom.png" alt="" />
+          <img src="images/cabin-2-bedroom.png" alt="" />
         </div>
 
         <div class="gallery-item">
-          <img src="images/cabin-1-fireplace.png" alt="" />
+          <img src="images/cabin-2-fireplace.png" alt="" />
         </div>
       </div>
 
       <div class="centred-text">
         <h2>Key features</h2>
         <p>
-          Escape to a tranquil retreat in this cozy 2-bedroom cabin nestled
-          within a secluded pine forest. Relax on your private deck with
-          picturesque forest views, and savour home-cooked meals in the modern
-          kitchen. Unwind in the comfortable living area by the warm fireplace,
-          and refresh in the modern bathroom facilities. Nature enthusiasts will
-          appreciate the nearby hiking trails and wildlife viewing
-          opportunities, while convenient on-site parking ensures a hassle-free
+          Discover a charming 1-bedroom cabin perched by a serene river, where
+          your private deck offers captivating river views. Inside, a spacious
+          living area with a cozy fireplace sets the stage for relaxation, and a
+          modern kitchen makes meal preparation a breeze. The comfortable
+          bedroom features nature-themed decor for a unique touch. With canoeing
+          and fishing opportunities at your doorstep, and riverside seating with
+          a fire pit for ultimate relaxation, this tranquil retreat promises a
+          serene escape. On-site parking ensures convenience throughout your
           stay.
         </p>
         <button>Book now</button>
