--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="checker" id="checker">
         <div class="checker-content">
           <div class="checker-text">
-            <h3>Tranquil Pines Cabin</h3>
+            <h3>Tranquil Pines</h3>
             <h4>From £150 per night</h4>
             <p>
               Nestled in a pine forest, this cabin offers a serene retreat,
@@ -189,7 +189,7 @@
                 1 Bathroom
               </li>
             </ul>
-            <button>Book now</button>
+            <a href="/tranquil-pines-cabin.html"><button>Book now</button></a>
           </div>
         </div>
         <div class="checker-image">
@@ -263,7 +263,7 @@
                 1 Bathroom
               </li>
             </ul>
-            <a href="/tranquil-pines-cabin.html"><button>Book now</button></a>
+            <a href="/riverside-haven-cabin.html"><button>Book now</button></a>
           </div>
         </div>
       </div>
@@ -271,7 +271,7 @@
       <div class="checker">
         <div class="checker-content">
           <div class="checker-text">
-            <h3>Mountain Vista Retreat</h3>
+            <h3>Mountain Vista</h3>
             <h4>From £160 per night</h4>
             <p>
               Perched on a hill, this cabin showcases breathtaking mountain
@@ -332,7 +332,7 @@
                 1 Bathroom
               </li>
             </ul>
-            <button>Book now</button>
+            <a href="/mountain-vista-cabin.html"><button>Book now</button></a>
           </div>
         </div>
         <div class="checker-image">
