--- a/mountain-vista-cabin.html
+++ b/mountain-vista-cabin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tranquil Pines</title>
+    <title>Mountain Vista</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,12 +35,12 @@
     <main>
       <div class="cabin-header text-wide-img">
         <div class="centred-text">
-          <h1>Tranquil Pines</h1>
-          <h4>From £150 per night</h4>
+          <h1>Mountain Vista</h1>
+          <h4>From £160 per night</h4>
           <p class="p-large">
-            Nestled in a pine forest, this cabin offers a serene retreat, where
-            the soothing whispers of the wind and the fragrance of pine trees
-            transport you to a tranquil haven.
+            Perched on a hill, this cabin showcases breathtaking mountain views.
+            Experience the awe-inspiring beauty of the peaks and valleys, making
+            it an ideal retreat for nature lovers and adventure seekers.
           </p>
           <ul>
             <li>
@@ -98,7 +98,7 @@
           <button>Book now</button>
         </div>
         <div class="wide-img">
-          <img src="/images/cabin-1-header.png" alt="" />
+          <img src="/images/cabin-3-header.png" alt="" />
           <div class="location">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -130,19 +130,19 @@
 
       <div class="gallery">
         <div class="gallery-item">
-          <img src="images/cabin-1-kitchen.png" alt="" />
+          <img src="images/cabin-3-kitchen.png" alt="" />
         </div>
 
         <div class="gallery-item">
-          <img src="images/cabin-1-bathroom.png" alt="" />
+          <img src="images/cabin-3-bathroom.png" alt="" />
         </div>
 
         <div class="gallery-item">
-          <img src="images/cabin-1-bedroom.png" alt="" />
+          <img src="images/cabin-3-bedroom.png" alt="" />
         </div>
 
         <div class="gallery-item">
-          <img src="images/cabin-1-fireplace.png" alt="" />
+          <img src="images/cabin-3-fireplace.png" alt="" />
         </div>
       </div>
 
