--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Unwind in Nature's Embrace</title>
+    <title>Book your stay</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -91,9 +91,9 @@
         <h2>Need assistance?</h2>
         <p>
           We value your feedback and inquiries. If you have any questions, you
-          can reach us at <a href="">email@email.com</a>. Your satisfaction is
+          can reach us at <a href="#">email@email.com</a>. Your satisfaction is
           our priority. For urgent matters, please reach us at
-          <a href="">000 000 0000</a>. We look forward to hearing from you.
+          <a href="#">000 000 0000</a>. We look forward to hearing from you.
         </p>
       </div>
     </main>
