--- a/about.html
+++ b/about.html
@@ -32,6 +32,17 @@
     />
   </head>
   <body>
+    <nav>
+      <div class="logo">
+        <a href="/"> <img src="/images/logo.svg" alt="logo" /></a>
+      </div>
+      <div class="nav-links">
+        <a href="/" class="nav-text-link">Home</a>
+        <a href="/index.html#checker" class="nav-text-link">Resorts</a>
+        <a href="/about.html" class="active" class="nav-text-link">About us</a>
+        <a href="/contact.html"><button>Book now</button></a>
+      </div>
+    </nav>
     <main>
       <h1 class="page-header">About us</h1>
       <div class="checker">
@@ -156,5 +167,6 @@
         </div>
       </div>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
