--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
     />
   </head>
   <body>
+    <nav>
+      <div class="logo">
+        <a href="/"> <img src="/images/logo.svg" alt="logo" /></a>
+      </div>
+      <div class="nav-links">
+        <a href="/" class="active" class="nav-text-link">Home</a>
+        <a href="/index.html#checker" class="nav-text-link">Resorts</a>
+        <a href="/about.html" class="nav-text-link">About us</a>
+        <a href="/contact.html"><button>Book now</button></a>
+      </div>
+    </nav>
     <div class="hero">
       <div class="centred-text">
         <h1>Unwind in Nature's Embrace</h1>
@@ -44,7 +55,7 @@
           <a href="/index.html#checker"
             ><button class="secondary-button">Explore resorts</button></a
           >
-          <button>Book with us</button>
+          <a href="/contact.html"><button>Book with us</button></a>
         </div>
       </div>
     </div>
@@ -432,5 +443,6 @@
         </div>
       </div>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
