--- a/riverside-haven-cabin.html
+++ b/riverside-haven-cabin.html
@@ -32,6 +32,17 @@
     />
   </head>
   <body>
+    <nav>
+      <div class="logo">
+        <a href="/"> <img src="/images/logo.svg" alt="logo" /></a>
+      </div>
+      <div class="nav-links">
+        <a href="/" class="nav-text-link">Home</a>
+        <a href="/index.html#checker" class="nav-text-link">Resorts</a>
+        <a href="/about.html" class="nav-text-link">About us</a>
+        <a href="/contact.html"><button>Book now</button></a>
+      </div>
+    </nav>
     <main>
       <div class="cabin-header text-wide-img">
         <div class="centred-text">
@@ -162,5 +173,6 @@
         <button>Book now</button>
       </div>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
