--- a/about.html
+++ b/about.html
@@ -167,6 +167,85 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="footer">
+        <a href="/"><img src="/images/logo.svg" alt="logo" /></a>
+        <div class="social-icons">
+          <a href="#">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
+                fill="#20748A"
+              />
+              <path
+                d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z"
+                fill="#20748A"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M1.65396 4.27606C1 5.55953 1 7.23969 1 10.6V13.4C1 16.7603 1 18.4405 1.65396 19.7239C2.2292 20.8529 3.14708 21.7708 4.27606 22.346C5.55953 23 7.23969 23 10.6 23H13.4C16.7603 23 18.4405 23 19.7239 22.346C20.8529 21.7708 21.7708 20.8529 22.346 19.7239C23 18.4405 23 16.7603 23 13.4V10.6C23 7.23969 23 5.55953 22.346 4.27606C21.7708 3.14708 20.8529 2.2292 19.7239 1.65396C18.4405 1 16.7603 1 13.4 1H10.6C7.23969 1 5.55953 1 4.27606 1.65396C3.14708 2.2292 2.2292 3.14708 1.65396 4.27606ZM13.4 3H10.6C8.88684 3 7.72225 3.00156 6.82208 3.0751C5.94524 3.14674 5.49684 3.27659 5.18404 3.43597C4.43139 3.81947 3.81947 4.43139 3.43597 5.18404C3.27659 5.49684 3.14674 5.94524 3.0751 6.82208C3.00156 7.72225 3 8.88684 3 10.6V13.4C3 15.1132 3.00156 16.2777 3.0751 17.1779C3.14674 18.0548 3.27659 18.5032 3.43597 18.816C3.81947 19.5686 4.43139 20.1805 5.18404 20.564C5.49684 20.7234 5.94524 20.8533 6.82208 20.9249C7.72225 20.9984 8.88684 21 10.6 21H13.4C15.1132 21 16.2777 20.9984 17.1779 20.9249C18.0548 20.8533 18.5032 20.7234 18.816 20.564C19.5686 20.1805 20.1805 19.5686 20.564 18.816C20.7234 18.5032 20.8533 18.0548 20.9249 17.1779C20.9984 16.2777 21 15.1132 21 13.4V10.6C21 8.88684 20.9984 7.72225 20.9249 6.82208C20.8533 5.94524 20.7234 5.49684 20.564 5.18404C20.1805 4.43139 19.5686 3.81947 18.816 3.43597C18.5032 3.27659 18.0548 3.14674 17.1779 3.0751C16.2777 3.00156 15.1132 3 13.4 3Z"
+                fill="#20748A"
+              />
+            </svg>
+          </a>
+
+          <a href="#">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M7.548 21.5997C16.6044 21.5997 21.558 14.2119 21.558 7.8061C21.558 7.5958 21.558 7.38708 21.5436 7.17915C22.5072 6.4939 23.3388 5.64309 24 4.66958C23.1024 5.06182 22.1484 5.31906 21.1728 5.43247C22.2 4.82638 22.9692 3.87419 23.3376 2.75063C22.3704 3.31536 21.3132 3.71393 20.2104 3.92778C18.3456 1.97602 15.2268 1.88145 13.2432 3.71743C11.9652 4.90124 11.4216 6.66629 11.8188 8.34985C7.86 8.15374 4.1712 6.31306 1.6704 3.28501C0.3636 5.50022 1.032 8.33305 3.1956 9.75552C2.412 9.73306 1.6452 9.52535 0.96 9.14966V9.21118C0.9612 11.5186 2.6136 13.5053 4.9104 13.9625C4.1856 14.1575 3.4248 14.1858 2.688 14.0452C3.3324 16.0206 5.1816 17.3736 7.2876 17.4125C5.544 18.7618 3.39 19.4944 1.1724 19.492C0.7812 19.4909 0.39 19.4684 0 19.4223C2.2524 20.8448 4.872 21.5997 7.548 21.5961"
+                fill="#20748A"
+              />
+            </svg>
+          </a>
+
+          <a href="#">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <g clip-path="url(#clip0_98_3111)">
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M9.58613 15.1034V8.36926C11.9768 9.49417 13.8283 10.5809 16.0181 11.7525C14.212 12.7541 11.9768 13.878 9.58613 15.1034ZM22.9092 5.02004C22.4968 4.47673 21.794 4.0538 21.0457 3.91379C18.8463 3.49613 5.12518 3.49494 2.92698 3.91379C2.32693 4.02628 1.7926 4.29818 1.3336 4.72062C-0.600435 6.5157 0.00559941 16.1421 0.471777 17.7015C0.667809 18.3764 0.921228 18.8632 1.24038 19.1827C1.65157 19.6052 2.21456 19.896 2.86123 20.0265C4.67214 20.4011 14.0016 20.6105 21.0074 20.0827C21.6529 19.9702 22.2243 19.67 22.6749 19.2296C24.4631 17.4417 24.3412 7.27466 22.9092 5.02004Z"
+                  fill="#20748A"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_98_3111">
+                  <rect width="24" height="24" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+          </a>
+        </div>
+        <div class="footer-links">
+          <a href="/">Home</a>
+          <a href="/index.html#checker">Resorts</a>
+          <a href="/about.html">About us</a>
+        </div>
+      </div>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
