Linked book now buttons to contact page

--- a/index.html
+++ b/index.html
@@ -200,7 +200,9 @@
                 1 Bathroom
               </li>
             </ul>
-            <a href="/tranquil-pines-cabin.html"><button>Book now</button></a>
+            <a href="/tranquil-pines-cabin.html"
+              ><button>Find out more</button></a
+            >
           </div>
         </div>
         <div class="checker-image">
@@ -274,7 +276,9 @@
                 1 Bathroom
               </li>
             </ul>
-            <a href="/riverside-haven-cabin.html"><button>Book now</button></a>
+            <a href="/riverside-haven-cabin.html"
+              ><button>Find out more</button></a
+            >
           </div>
         </div>
       </div>
@@ -343,7 +347,9 @@
                 1 Bathroom
               </li>
             </ul>
-            <a href="/mountain-vista-cabin.html"><button>Book now</button></a>
+            <a href="/mountain-vista-cabin.html"
+              ><button>Find out more</button></a
+            >
           </div>
         </div>
         <div class="checker-image">
