--- a/mountain-vista-cabin.html
+++ b/mountain-vista-cabin.html
@@ -106,7 +106,7 @@
               1 Bathroom
             </li>
           </ul>
-          <button>Book now</button>
+          <a href="/contact.html"><button>Book now</button></a>
         </div>
         <div class="wide-img">
           <img src="/images/cabin-3-header.png" alt="" />
@@ -169,7 +169,7 @@
           opportunities, while convenient on-site parking ensures a hassle-free
           stay.
         </p>
-        <button>Book now</button>
+        <a href="/contact.html"><button>Book now</button></a>
       </div>
     </main>
     <footer>
