--- a/riverside-haven-cabin.html
+++ b/riverside-haven-cabin.html
@@ -106,7 +106,7 @@
               1 Bathroom
             </li>
           </ul>
-          <button>Book now</button>
+          <a href="/contact.html"><button>Book now</button></a>
         </div>
         <div class="wide-img">
           <img src="/images/cabin-2-header.png" alt="" />
@@ -170,7 +170,7 @@
           serene escape. On-site parking ensures convenience throughout your
           stay.
         </p>
-        <button>Book now</button>
+        <a href="/contact.html"><button>Book now</button></a>
       </div>
     </main>
     <footer>
