Added basic SEO

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book your stay</title>
+    <meta
+      name="description"
+      content="Book your stay with us and we'll take care of the rest!"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -37,9 +41,16 @@
         <a href="/"> <img src="/images/logo.svg" alt="logo" /></a>
       </div>
       <div class="nav-links">
-        <a href="/" class="nav-text-link">Home</a>
-        <a href="/index.html#checker" class="nav-text-link">Resorts</a>
-        <a href="/about.html" class="nav-text-link">About us</a>
+        <a href="/" class="nav-text-link" title="Home page">Home</a>
+        <a
+          href="/index.html#checker"
+          class="nav-text-link"
+          title="Explore our resorts"
+          >Resorts</a
+        >
+        <a href="/about.html" class="nav-text-link" title="About us"
+          >About us</a
+        >
         <a href="/contact.html" class="active"><button>Book now</button></a>
       </div>
     </nav>
@@ -47,7 +58,10 @@
       <h1 class="page-header">Book your stay</h1>
       <div class="checker">
         <div class="checker-image">
-          <img src="/images/contact-image.png" alt="" />
+          <img
+            src="/images/contact-image.png"
+            alt="Happy couple relaxing in cabon"
+          />
         </div>
         <div class="checker-content">
           <div class="checker-form">
