--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About us</title>
+    <meta
+      name="description"
+      content="We're proud to have a team of passionate people, learn more about us."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -37,9 +41,16 @@
         <a href="/"> <img src="/images/logo.svg" alt="logo" /></a>
       </div>
       <div class="nav-links">
-        <a href="/" class="nav-text-link">Home</a>
-        <a href="/index.html#checker" class="nav-text-link">Resorts</a>
-        <a href="/about.html" class="active" class="nav-text-link">About us</a>
+        <a href="/" class="nav-text-link" title="Home page">Home</a>
+        <a
+          href="/index.html#checker"
+          class="nav-text-link"
+          title="Explore our resorts"
+          >Resorts</a
+        >
+        <a href="/about.html" class="nav-text-link active" title="About us"
+          >About us</a
+        >
         <a href="/contact.html"><button>Book now</button></a>
       </div>
     </nav>
@@ -47,7 +58,10 @@
       <h1 class="page-header">About us</h1>
       <div class="checker">
         <div class="checker-image">
-          <img src="/images/mission-statement.png" alt="" />
+          <img
+            src="/images/mission-statement.png"
+            alt="Woman happy relaxing in cabin"
+          />
         </div>
         <div class="checker-content">
           <div class="checker-text">
@@ -81,7 +95,10 @@
         </div>
 
         <div class="checker-image">
-          <img src="/images/journey.png" alt="" />
+          <img
+            src="/images/journey.png"
+            alt="Group of team members happy sitting in cabin"
+          />
         </div>
       </div>
 
@@ -163,7 +180,7 @@
           </p>
         </div>
         <div class="wide-img">
-          <img src="/images/team-photo.png" alt="" />
+          <img src="/images/team-photo.png" alt="Team photo" />
         </div>
       </div>
     </main>
