--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Unwind in Nature's Embrace</title>
+    <title>Unwind in Nature's Embrace | Nature Stays</title>
+    <meta
+      name="description"
+      content="Our handcrafted wood cabins offer the perfect blend of comfort and rustic charm, allowing you to disconnect from the digital world and reconnect with the natural world."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -37,9 +41,16 @@
         <a href="/"> <img src="/images/logo.svg" alt="logo" /></a>
       </div>
       <div class="nav-links">
-        <a href="/" class="active" class="nav-text-link">Home</a>
-        <a href="/index.html#checker" class="nav-text-link">Resorts</a>
-        <a href="/about.html" class="nav-text-link">About us</a>
+        <a href="/" class="nav-text-link active" title="Home page">Home</a>
+        <a
+          href="/index.html#checker"
+          class="nav-text-link"
+          title="Explore our resorts"
+          >Resorts</a
+        >
+        <a href="/about.html" class="nav-text-link" title="About us"
+          >About us</a
+        >
         <a href="/contact.html"><button>Book now</button></a>
       </div>
     </nav>
@@ -206,13 +217,13 @@
           </div>
         </div>
         <div class="checker-image">
-          <img src="/images/cabin-1.png" alt="" />
+          <img src="/images/cabin-1.png" alt="Tranquil Pines Cabin" />
         </div>
       </div>
 
       <div class="checker">
         <div class="checker-image">
-          <img src="/images/cabin-2.png" alt="" />
+          <img src="/images/cabin-2.png" alt="Riverside Haven Cabin" />
         </div>
         <div class="checker-content">
           <div class="checker-text">
@@ -353,7 +364,7 @@
           </div>
         </div>
         <div class="checker-image">
-          <img src="/images/cabin-3.png" alt="" />
+          <img src="/images/cabin-3.png" alt="Mountain Vista Cabin" />
         </div>
       </div>
 
