--- a/riverside-haven-cabin.html
+++ b/riverside-haven-cabin.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Riverside Haven</title>
+    <meta
+      name="description"
+      content="Situated by a gentle river, this cabin provides a peaceful escape. The calming sounds of the river and the stunning riverbank views offer a rejuvenating and relaxing stay."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -37,9 +41,16 @@
         <a href="/"> <img src="/images/logo.svg" alt="logo" /></a>
       </div>
       <div class="nav-links">
-        <a href="/" class="nav-text-link">Home</a>
-        <a href="/index.html#checker" class="nav-text-link">Resorts</a>
-        <a href="/about.html" class="nav-text-link">About us</a>
+        <a href="/" class="nav-text-link" title="Home page">Home</a>
+        <a
+          href="/index.html#checker"
+          class="nav-text-link"
+          title="Explore our resorts"
+          >Resorts</a
+        >
+        <a href="/about.html" class="nav-text-link" title="About us"
+          >About us</a
+        >
         <a href="/contact.html"><button>Book now</button></a>
       </div>
     </nav>
@@ -109,7 +120,7 @@
           <a href="/contact.html"><button>Book now</button></a>
         </div>
         <div class="wide-img">
-          <img src="/images/cabin-2-header.png" alt="" />
+          <img src="/images/cabin-2-header.png" alt="Outside image of cabin" />
           <div class="location">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -141,19 +152,22 @@
 
       <div class="gallery">
         <div class="gallery-item">
-          <img src="images/cabin-2-kitchen.png" alt="" />
+          <img src="images/cabin-2-kitchen.png" alt="Modern cabin kitchen" />
         </div>
 
         <div class="gallery-item">
-          <img src="images/cabin-2-bathroom.png" alt="" />
+          <img src="images/cabin-2-bathroom.png" alt="Modern cabin bathroom" />
         </div>
 
         <div class="gallery-item">
-          <img src="images/cabin-2-bedroom.png" alt="" />
+          <img src="images/cabin-2-bedroom.png" alt="Modern cabin bedroom" />
         </div>
 
         <div class="gallery-item">
-          <img src="images/cabin-2-fireplace.png" alt="" />
+          <img
+            src="images/cabin-2-fireplace.png"
+            alt="Modern cabin fireplace"
+          />
         </div>
       </div>
 
