Added link to Github in footer

--- a/about.html
+++ b/about.html
@@ -261,6 +261,14 @@
           <a href="/index.html#checker">Resorts</a>
           <a href="/about.html">About us</a>
         </div>
+        <p class="footer-text">
+          This website was coded by Emily Richards, and is
+          <a
+            href="https://github.com/RichardsEmily/cabin-retreats-website"
+            target="_blank"
+            >open-sourced</a
+          >
+        </p>
       </div>
     </footer>
     <script src="index.js"></script>
